--- a/style.css
+++ b/style.css
@@ -3,390 +3,324 @@ body {
     overflow: auto;
 }
 
-.canvas {
-    max-width: 100%;
-    height: auto;
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    max-width: 100%;
-    height: auto;
-    align-items: center;
-    justify-content: center;
-    margin-top: 6rem;
-}
-
 .cards {
-    max-width: 100%;
-    height: auto;
+    max-width: 90%;
+    margin-top: 1rem;
+    margin-left: 1rem;
 }
 
 .card-one {
     background-color: hsl(263, 55%, 52%);
-    max-width: 81%;
-    height: 15%;
-    margin: 0 auto;
-    padding: 1rem;
+    max-width: 100%;
+    font-family: "Barlow Semi Condensed";
+    padding-bottom: 1rem;
     border-radius: 0.5rem;
-} 
+}
 
-.avatar-container {
-    position: absolute; 
+.card-one-container {
+    max-width: 100%;
+    padding-left: 0.5rem;
+    padding-right: 1rem;
+    padding-bottom: 1rem;
 }
 
 .avatar-daniel {
-    position: relative;
-    max-width: 40%;
-    border-radius: 2rem;
-    margin-top: 0.6rem;
-    margin-left: 1.2rem;
+    position: static;
+    width: 1.9rem;
+    border-radius: 4rem;
+    margin-top: 1.6rem;
+    margin-left: 1.3rem; 
 }
 
 .pattern-quotation {
-    position: static;
-    float: right;
-    margin-top: -1rem;
-    margin-right: 0.7rem;
+    position: absolute;
+    margin-top: 0.15rem;
+    margin-left: 9.5rem;
     z-index: 1;
 }
 
 .h1-card-one {
     position: relative;
     color: hsl(0, 0%, 100%);
-    font-family: "Barlow Semi Condensed";
     font-size: 0.85rem;
     font-weight: 500;
-    margin-top: 0.8rem;
-    margin-left: 4.2rem;
+    margin-top: -2rem;
+    margin-left: 3.8rem;
 }
 
 .h2-card-one {
     position: relative;
     color: hsl(0, 0%, 100%);
     opacity: 0.5;
-    font-family: "Barlow Semi Condensed";
-    font-size: 0.71rem;
+    font-size: 0.69rem;
     font-weight: 500;
     margin-top: -0.5rem;
-    margin-left: 4.2rem;
+    margin-left: 3.8rem;
+    padding: 0;
 }
 
 .h3-card-one {
-    display: inline-block;
     position: relative;
+    max-width: 82%;
     color: hsl(0, 0%, 100%);
-    opacity: 0.9;
-    font-family: "Barlow Semi Condensed";
-    font-size: 1.23rem;
+    font-size: 1.3rem;
     font-weight: 600;
-    width: 85%;
-    margin-top: -1.8rem;
-    margin-left: 1.5rem;
     line-height: 1.5rem;
     z-index: 2;
+    margin-top: 1.2rem;
+    margin-left: 1.9rem;
 }
 
 .p-card-one {
     position: relative;
+    max-width: 87%;
     color: hsl(0, 0%, 100%);
-    opacity: 0.5;
-    font-family: "Barlow Semi Condensed";
-    font-size: 0.78rem;
+    opacity: 0.7;
+    font-size: 0.8rem;
     font-weight: 500;
-    width: 77%;
-    margin-top: 0.12rem;
-    margin-left: 1.5rem;
-    line-height: 1.2rem;
+    line-height: 1rem;
+    margin-left: 1.9rem;
+    padding-right: 1rem;
 }
 
 .card-two {
     background-color: hsl(217, 19%, 35%);
-    max-width: 81%;
-    height: 15%;
-    margin: 0 auto;
-    margin-top: 1.5rem;
-    padding: 1rem;
+    max-width: 100%;
+    font-family: "Barlow Semi Condensed";
+    margin-top: 1rem;
+    padding-bottom: 1rem;
     border-radius: 0.5rem;
 }
 
+
 .avatar-jonathan {
-    position: relative;
-    max-width: 40%;
-    border-radius: 2rem;
-    margin-top: 0.6rem;
-    margin-left: 1.2rem;
+    position: static;
+    width: 1.9rem;
+    border-radius: 4rem;
+    margin-top: 1.6rem;
+    margin-left: 1.3rem; 
 }
 
 .h1-card-two {
     position: relative;
     color: hsl(0, 0%, 100%);
-    font-family: "Barlow Semi Condensed";
     font-size: 0.85rem;
     font-weight: 500;
-    margin-top: 0.5rem;
-    margin-left: 4.2rem;
+    margin-top: -2rem;
+    margin-left: 3.8rem;
 }
+
 
 .h2-card-two {
     position: relative;
     color: hsl(0, 0%, 100%);
     opacity: 0.5;
-    font-family: "Barlow Semi Condensed";
-    font-size: 0.71rem;
+    font-size: 0.69rem;
     font-weight: 500;
     margin-top: -0.5rem;
-    margin-left: 4.2rem;
+    margin-left: 3.8rem;
+    padding: 0;
 }
 
 .h3-card-two {
     position: relative;
+    max-width: 82%;
     color: hsl(0, 0%, 100%);
-    opacity: 0.9;
-    font-family: "Barlow Semi Condensed";
-    font-size: 1.23rem;
+    font-size: 1.3rem;
     font-weight: 600;
-    width: 85%;
-    margin-top: 1rem;
-    margin-left: 1.5rem;
     line-height: 1.5rem;
+    margin-top: 1.2rem;
+    margin-left: 1.9rem;
 }
 
 .p-card-two {
     position: relative;
+    max-width: 80%;
     color: hsl(0, 0%, 100%);
     opacity: 0.7;
-    font-family: "Barlow Semi Condensed";
-    font-size: 0.78rem;
+    font-size: 0.8rem;
     font-weight: 500;
-    width: 90%;
-    margin-top: 0.12rem;
-    margin-left: 1.5rem;
-    line-height: 1.2rem;
+    line-height: 1rem;
+    margin-left: 1.9rem;
+    padding-right: 1rem;
 }
 
 .card-three {
     background-color: hsl(0, 0%, 100%);
-    max-width: 81%;
-    height: 15%;
-    margin: 0 auto;
-    margin-top: 1.5rem;
-    padding: 1rem;
+    max-width: 100%;
+    font-family: "Barlow Semi Condensed";
+    margin-top: 1rem;
+    padding-bottom: 1rem;
     border-radius: 0.5rem;
 }
 
 .avatar-jeanette {
-    position: relative;
-    max-width: 40%;
-    border-radius: 2rem;
-    margin-top: 0.6rem;
-    margin-left: 1.2rem;
+    position: static;
+    width: 1.9rem;
+    border-radius: 4rem;
+    margin-top: 1.6rem;
+    margin-left: 1.3rem; 
 }
 
 .h1-card-three {
     position: relative;
     color: hsl(217, 19%, 35%);
-    font-family: "Barlow Semi Condensed";
     font-size: 0.85rem;
     font-weight: 500;
-    margin-top: 0.5rem;
-    margin-left: 4.2rem;
+    margin-top: -2rem;
+    margin-left: 3.8rem;
 }
 
 .h2-card-three {
     position: relative;
     color: hsl(217, 19%, 35%);
     opacity: 0.5;
-    font-family: "Barlow Semi Condensed";
-    font-size: 0.71rem;
+    font-size: 0.69rem;
     font-weight: 500;
     margin-top: -0.5rem;
-    margin-left: 4.2rem;
+    margin-left: 3.8rem;
+    padding: 0;
 }
 
 .h3-card-three {
     position: relative;
+    max-width: 82%;
     color: hsl(217, 19%, 35%);
-    opacity: 1;
-    font-family: "Barlow Semi Condensed";
-    font-size: 1.23rem;
+    font-size: 1.3rem;
     font-weight: 600;
-    width: 85%;
-    margin-top: 1rem;
-    margin-left: 1.5rem;
     line-height: 1.5rem;
+    margin-top: 1.2rem;
+    margin-left: 1.9rem;
 }
 
 .p-card-three {
     position: relative;
+    max-width: 100%;
     color: hsl(217, 19%, 35%);
     opacity: 0.7;
-    font-family: "Barlow Semi Condensed";
-    font-size: 0.79rem;
+    font-size: 0.8rem;
     font-weight: 500;
-    width: 80%;
-    margin-top: 0.12rem;
-    margin-left: 1.5rem;
-    line-height: 1.2rem;
+    line-height: 1rem;
+    margin-left: 1.9rem;
+    padding-right: 3rem;
 }
 
 .card-four {
-    background-color:  hsl(219, 29%, 14%);
-    max-width: 81%;
-    height: 15%;
-    margin: 0 auto;
-    margin-top: 1.5rem;
-    padding: 1rem;
+    background-color: hsl(219, 29%, 14%);
+    max-width: 100%;
+    font-family: "Barlow Semi Condensed";
+    margin-top: 1rem;
+    padding-bottom: 1rem;
     border-radius: 0.5rem;
 }
 
 .avatar-patrick {
-    position: relative;
-    max-width: 40%;
-    border-radius: 2rem;
-    margin-top: 0.6rem;
-    margin-left: 1.2rem;
+    position: static;
+    width: 1.9rem;
+    border-radius: 4rem;
+    margin-top: 1.6rem;
+    margin-left: 1.3rem;
 }
 
 .h1-card-four {
     position: relative;
     color: hsl(0, 0%, 100%);
-    font-family: "Barlow Semi Condensed";
     font-size: 0.85rem;
     font-weight: 500;
-    margin-top: 0.5rem;
-    margin-left: 4.2rem;
+    margin-top: -2rem;
+    margin-left: 3.8rem;
 }
 
 .h2-card-four {
     position: relative;
     color: hsl(0, 0%, 100%);
     opacity: 0.5;
-    font-family: "Barlow Semi Condensed";
-    font-size: 0.71rem;
+    font-size: 0.69rem;
     font-weight: 500;
     margin-top: -0.5rem;
-    margin-left: 4.2rem;
+    margin-left: 3.8rem;
+    padding: 0;
 }
 
 .h3-card-four {
     position: relative;
+    max-width: 82%;
     color: hsl(0, 0%, 100%);
-    opacity: 1;
-    font-family: "Barlow Semi Condensed";
-    font-size: 1.23rem;
+    font-size: 1.3rem;
     font-weight: 600;
-    min-width: 85%;
-    max-width: 100%;
-    margin-top: 1rem;
-    margin-left: 1.5rem;
     line-height: 1.5rem;
+    margin-top: 1.2rem;
+    margin-left: 1.9rem;
 }
 
 .p-card-four {
     position: relative;
+    max-width: 100%;
     color: hsl(0, 0%, 100%);
     opacity: 0.7;
-    font-family: "Barlow Semi Condensed";
-    font-size: 0.79rem;
+    font-size: 0.8rem;
     font-weight: 500;
-    min-width: 70%;
-    max-width: 100%;
-    margin-top: 0.12rem;
-    margin-left: 1.5rem;
-    line-height: 1.2rem;
+    line-height: 1rem;
+    margin-left: 1.9rem;
+    padding-right: 3rem;
 }
 
 .card-five {
     background-color: hsl(0, 0%, 100%);
-    max-width: 81%;
-    height: 15%;
-    margin: 0 auto;
-    margin-top: 1.5rem;
-    padding: 1rem;
+    max-width: 100%;
+    font-family: "Barlow Semi Condensed";
+    margin-top: 1rem;
+    padding-bottom: 1rem;
     border-radius: 0.5rem;
 }
 
 .avatar-kira {
-    position: relative;
-    max-width: 40%;
-    border-radius: 2rem;
-    margin-top: 0.6rem;
-    margin-left: 1.2rem;
+    position: static;
+    width: 1.9rem;
+    border-radius: 4rem;
+    margin-top: 1.6rem;
+    margin-left: 1.3rem;
 }
 
 .h1-card-five {
     position: relative;
     color: hsl(217, 19%, 35%);
-    font-family: "Barlow Semi Condensed";
     font-size: 0.85rem;
     font-weight: 500;
-    margin-top: 0.5rem;
-    margin-left: 4.2rem;
+    margin-top: -2rem;
+    margin-left: 3.8rem;
 }
 
 .h2-card-five {
     position: relative;
     color: hsl(217, 19%, 35%);
     opacity: 0.5;
-    font-family: "Barlow Semi Condensed";
-    font-size: 0.71rem;
+    font-size: 0.69rem;
     font-weight: 500;
     margin-top: -0.5rem;
-    margin-left: 4.2rem;
+    margin-left: 3.8rem;
+    padding: 0;
 }
 
 .h3-card-five {
     position: relative;
+    max-width: 82%;
     color: hsl(217, 19%, 35%);
-    opacity: 1;
-    font-family: "Barlow Semi Condensed";
-    font-size: 1.23rem;
+    font-size: 1.3rem;
     font-weight: 600;
-    width: 85%;
-    margin-top: 1rem;
-    margin-left: 1.5rem;
     line-height: 1.5rem;
+    margin-top: 1.2rem;
+    margin-left: 1.9rem;
 }
 
 .p-card-five {
     position: relative;
-    color: hsl(217, 19%, 35%);
+    max-width: 100%;
+    color: hsl(219, 29%, 14%);
     opacity: 0.7;
-    font-family: "Barlow Semi Condensed";
-    font-size: 0.80rem;
+    font-size: 0.8rem;
     font-weight: 500;
-    width: 84%;
-    margin-top: 0.12rem;
-    margin-left: 1.5rem;
-    line-height: 1.2rem;
-}
-
-@media screen and (min-width: 900px) and (max-width: 1500px) {
-    
-    body {
-        overflow: auto;
-    }
-
-    .cards {
-        max-width: 40%;
-    }
-
-    .card-one {
-        max-width: 100%;
-    }
-
-    .card-two {
-        max-width: 50%;
-    }
-
-    .card-three {
-        max-width: 45%;
-    }
-
-    .card-four {
-        max-width: 140%;
-    }
+    line-height: 1rem;
+    margin-left: 1.9rem;
+    padding-right: 2.2rem;
 }
