--- a/style.css
+++ b/style.css
@@ -333,14 +333,14 @@ body {
 @media screen and (min-width: 900px) and (max-width: 1440px) {
     
     body {
-        overflow: auto;
+        overflow: scroll;
     }
 
     .canvas {
-        max-width: 40%;
+        max-width: 45%;
         height: auto;
         margin-top: -5rem;
-        margin-left: -1rem;
+        margin-left: -3rem;
         margin-bottom: 25rem;
         padding-top: 1rem;
         padding-bottom: 35rem;
@@ -361,6 +361,7 @@ body {
        height: auto;
        margin-top: 10rem;
        margin-left: 10rem;
+       margin-right: 1rem;
        padding-bottom: 1rem;
        padding-right: 0.5rem;
        overflow: hidden;
@@ -388,7 +389,7 @@ body {
         max-width: 20%;
         height: auto;
         margin-top: 10rem;
-        margin-left: 46rem;
+        margin-left: 47rem;
         margin-right: 0.25rem;
         padding-bottom: 0.8rem;
     }
@@ -404,7 +405,7 @@ body {
         height: auto;
         margin-top: 30rem;
         margin-left: 10rem;
-        padding-bottom: 2rem;
+        padding-bottom: 1.8rem;
         box-shadow: 9px 3px 11px 1px rgba(0, 0, 0, 0.2);
     }
 
@@ -418,11 +419,12 @@ body {
 
     .card-four {
         position: absolute;
-        max-width: 41%;
+        max-width: 42.3%;
         height: auto;
         margin-top: 30rem;
         margin-left: 28.5rem;
         padding-bottom: 2rem;
+        align-content: center;
         box-shadow: 9px 3px 11px 1px rgba(0, 0, 0, 0.2);
     }
 
@@ -442,9 +444,10 @@ body {
         max-width: 20%;
         height: auto;
         margin-top: 9.95rem;
-        margin-left: 64.8rem;
+        margin-left: 66rem;
         padding-right: 0.15rem;
         padding-bottom: 0.7rem;
+        align-content: center;
         box-shadow: 9px 3px 11px 1px rgba(0, 0, 0, 0.2);
     }
 
