--- a/style.css
+++ b/style.css
@@ -330,25 +330,21 @@ body {
     padding-right: 2.2rem;
 }
 
-@media screen and (min-width: 900px) and (max-width: 1440px) {
+@media screen and (min-width: 900px) and (max-width: 1500px) {
     
     body {
         overflow: scroll;
     }
 
     .canvas {
-        max-width: 45%;
+        max-width: 100%;
         height: auto;
-        margin-top: -5rem;
-        margin-left: -3rem;
-        margin-bottom: 25rem;
-        padding-top: 1rem;
-        padding-bottom: 35rem;
     }
 
     .container {
         display: flex;
         flex-direction: row;
+        max-width: 100%;
     }
 
     .cards {
@@ -357,13 +353,12 @@ body {
 
     .card-one {
        position: absolute;
-       max-width: 40%;
+       max-width: 36%;
        height: auto;
        margin-top: 10rem;
        margin-left: 10rem;
-       margin-right: 1rem;
        padding-bottom: 1rem;
-       padding-right: 0.5rem;
+       padding-right: 0.25rem;
        overflow: hidden;
     }
 
@@ -386,45 +381,49 @@ body {
 
     .card-two {
         position: absolute;
-        max-width: 20%;
+        max-width: 19%;
         height: auto;
         margin-top: 10rem;
-        margin-left: 47rem;
+        margin-left: 44rem;
         margin-right: 0.25rem;
         padding-bottom: 0.8rem;
     }
 
+    .h3-card-two {
+        font-size: 1.23rem;
+    }
+
     .p-card-two {
         font-size: 0.8rem;
-        margin-right: 2rem;
+        margin-right: 3rem;
     }
 
     .card-three {
         position: absolute;
-        max-width: 19.5%;
+        max-width: 18%;
         height: auto;
         margin-top: 30rem;
         margin-left: 10rem;
-        padding-bottom: 1.8rem;
+        padding-bottom: 1rem;
         box-shadow: 9px 3px 11px 1px rgba(0, 0, 0, 0.2);
     }
 
     .h3-card-three {
-        max-width: 75%;
+        max-width: 70%;
+        font-size: 1.23rem;
     }
 
     .p-card-three {
-        margin-right: 0.25rem;
+        margin-right: 0.15rem;
     }
 
     .card-four {
         position: absolute;
-        max-width: 42.3%;
+        max-width: 37.5%;
         height: auto;
         margin-top: 30rem;
-        margin-left: 28.5rem;
-        padding-bottom: 2rem;
-        align-content: center;
+        margin-left: 27.5rem;
+        padding-bottom: 1rem;
         box-shadow: 9px 3px 11px 1px rgba(0, 0, 0, 0.2);
     }
 
@@ -432,27 +431,35 @@ body {
         max-width: 90%;
         opacity: 0.9;
         line-height: 1.5rem;
+        font-size: 1.22rem;
     }
 
     .p-card-four {
         margin-top: 1.5rem;
-        margin-right: 1rem;
+        margin-right: 0.15rem;
     }
 
     .card-five {
         position: absolute;
-        max-width: 20%;
+        max-width: 18%;
         height: auto;
-        margin-top: 9.95rem;
-        margin-left: 66rem;
+        margin-top: 9.99rem;
+        margin-left: 63rem;
         padding-right: 0.15rem;
-        padding-bottom: 0.7rem;
+        padding-bottom: 0.45rem;
         align-content: center;
         box-shadow: 9px 3px 11px 1px rgba(0, 0, 0, 0.2);
     }
 
+    .h3-card-five {
+        max-width: 90%;
+        opacity: 0.9;
+        line-height: 1.5rem;
+        font-size: 1.22rem;
+    }
+
     .p-card-five {
-        margin-top: 0.15rem;
-        margin-right: 1rem;
+        margin-top: -0.5rem;
+        margin-right: 0.1rem;
     }
 }
