--- a/style.css
+++ b/style.css
@@ -5,23 +5,27 @@
 body {
     background-color: hsl(210, 46%, 95%);
     overflow: auto;
+    padding-top: 2rem;
+    padding-bottom: 3rem;
 }
 
 .container {
     display: flex;
     flex-direction: column;
+    
 }
 
 .cards {
     max-width: 90%;
     margin-top: 1rem;
-    margin-left: 1rem;
+    margin-left: 1rem;  
 }
 
 .card-one {
+    position: absolute;
     background-color: hsl(263, 55%, 52%);
-    max-width: 100%;
-    height: auto;
+    max-width: 90%;
+    margin-bottom: 1rem;
     padding-bottom: 1rem;
     border-radius: 0.5rem;
 }
@@ -78,20 +82,21 @@ body {
 
 .p-card-one {
     position: relative;
-    max-width: 71%;
+    max-width: 85%;
     color: hsl(210, 46%, 95%);
     opacity: 0.7;
     font-size: 0.8rem;
     font-weight: 500;
     line-height: 1.25rem;
     margin-left: 2rem;
-    padding-right: 1rem;
+    padding-right: 2rem;
 }
 
 .card-two {
+    position: absolute;
     background-color: hsl(217, 19%, 35%);
-    max-width: 100%;
-    margin-top: 1rem;
+    max-width: 90%;
+    margin-top: 29.5rem;
     padding-bottom: 1rem;
     border-radius: 0.5rem;
 }
@@ -151,9 +156,10 @@ body {
 }
 
 .card-three {
+    position: absolute;
     background-color: hsl(0, 0%, 100%);
-    max-width: 100%;
-    margin-top: 1rem;
+    max-width: 90%;
+    margin-top: 46.5rem;
     padding-bottom: 1rem;
     border-radius: 0.5rem;
 }
@@ -211,9 +217,10 @@ body {
 }
 
 .card-four {
+    position: absolute;
     background-color: hsl(219, 29%, 14%);
-    max-width: 100%;
-    margin-top: 1rem;
+    max-width: 90%;
+    margin-top: 62.5rem;
     padding-bottom: 1rem;
     border-radius: 0.5rem;
 }
@@ -271,9 +278,10 @@ body {
 }
 
 .card-five {
+    position: absolute;
     background-color: hsl(0, 0%, 100%);
-    max-width: 100%;
-    margin-top: 1rem;
+    max-width: 90%;
+    margin-top: 90rem;
     padding-bottom: 1rem;
     border-radius: 0.5rem;
 }
@@ -333,7 +341,8 @@ body {
 @media screen and (min-width: 900px) and (max-width: 1500px) {
     
     body {
-        overflow: scroll;
+        overflow: auto;
+        padding-right: 2rem;
     }
 
     .canvas {
@@ -342,124 +351,88 @@ body {
     }
 
     .container {
-        display: flex;
-        flex-direction: row;
+        display: grid;
         max-width: 100%;
+        gap: 1rem;
     }
 
     .cards {
-        margin-top: -2rem;
+        max-width: 100%;
     }
 
     .card-one {
-       position: absolute;
-       max-width: 36%;
-       height: auto;
-       margin-top: 10rem;
-       margin-left: 10rem;
-       padding-bottom: 1rem;
-       padding-right: 0.25rem;
-       overflow: hidden;
+        max-width: 46%;
+        margin-left: 10rem;
+        align-content: center;
     }
 
-    .pattern-quotation {
-        position: absolute;
-        margin-left: 18rem;
-        margin-right: 3rem;
-        z-index: 1;
+    .card-one-container {
+        max-width: 100%;
+        margin-left: 0.5rem;
     }
 
     .h3-card-one {
-        max-width: 90%;
-        font-size: 1.22rem;
-        z-index: 2;
+        max-width: 100%;
     }
-
+    
     .p-card-one {
-        max-width: 87%;
+        max-width: 100%;
+        padding-right: 2rem;
     }
 
     .card-two {
-        position: absolute;
-        max-width: 19%;
-        height: auto;
-        margin-top: 10rem;
-        margin-left: 44rem;
-        margin-right: 0.25rem;
-        padding-bottom: 0.8rem;
-    }
-
-    .h3-card-two {
-        font-size: 1.23rem;
+        max-width: 24%;
+        max-height: 50%;
+        margin-top: -18.5rem;
+        margin-left: 48rem;
+        padding-bottom: 1.8rem;
     }
 
     .p-card-two {
-        font-size: 0.8rem;
-        margin-right: 3rem;
+        max-width: 100%;
     }
 
     .card-three {
-        position: absolute;
-        max-width: 18%;
-        height: auto;
-        margin-top: 30rem;
+        max-width: 20%;
+        margin-top: 3rem;
         margin-left: 10rem;
-        padding-bottom: 1rem;
-        box-shadow: 9px 3px 11px 1px rgba(0, 0, 0, 0.2);
     }
 
     .h3-card-three {
-        max-width: 70%;
-        font-size: 1.23rem;
+        max-width: 65%;
     }
 
     .p-card-three {
-        margin-right: 0.15rem;
+        max-width: 60%;
     }
 
     .card-four {
-        position: absolute;
-        max-width: 37.5%;
-        height: auto;
-        margin-top: 30rem;
-        margin-left: 27.5rem;
-        padding-bottom: 1rem;
-        box-shadow: 9px 3px 11px 1px rgba(0, 0, 0, 0.2);
+        max-width: 45.5%;
+        margin-top: -17.7rem;
+        margin-left: 27rem;
     }
 
     .h3-card-four {
-        max-width: 90%;
-        opacity: 0.9;
-        line-height: 1.5rem;
-        font-size: 1.22rem;
+        max-width: 100%;
     }
 
     .p-card-four {
-        margin-top: 1.5rem;
-        margin-right: 0.15rem;
+        max-width: 98%;
+        margin-right: 0.5rem;
     }
 
     .card-five {
-        position: absolute;
-        max-width: 18%;
-        height: auto;
-        margin-top: 9.99rem;
-        margin-left: 63rem;
-        padding-right: 0.15rem;
-        padding-bottom: 0.45rem;
+        max-width: 60%;
+        margin-top: -37rem;
+        margin-left: 68rem;
         align-content: center;
-        box-shadow: 9px 3px 11px 1px rgba(0, 0, 0, 0.2);
     }
 
     .h3-card-five {
-        max-width: 90%;
-        opacity: 0.9;
-        line-height: 1.5rem;
-        font-size: 1.22rem;
+        max-width: 100%;
     }
 
     .p-card-five {
-        margin-top: -0.5rem;
-        margin-right: 0.1rem;
+        max-width: 100%;
     }
 }
